--- a/player-clip/src/css/App.css
+++ b/player-clip/src/css/App.css
@@ -8,8 +8,7 @@
 .mainComponent {
   width: 1000px;
   height: 200px;
-  background-color: #afafaf;
-  border-radius: 5px;
+  background-color: #d7d7d7;
   cursor: pointer;
   position: fixed;
   place-items: center;
@@ -19,15 +18,13 @@
 .constantView {
   margin: 5px;
   width: 20%;
-  height: 90%;
-  background-color: #e9e9e9;
-  border-radius: 5px;
+  height: 95%;
+  background-color: #f8f8f8;
 }
 
 .tabs {
   margin: 5px;
-  width: 75%;
-  height: stretch;
-  background-color: #e9e9e9;
-  border-radius: 5px;
+  width: 80%;
+  height: 95%;
+  background-color: #f8f8f8;
 }
