--- a/player-clip/src/css/index.css
+++ b/player-clip/src/css/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(0, 0, 0, 0.87);
   background-color:#212228;
   background-image: linear-gradient(#292a30 .1em, transparent .1em), 
   linear-gradient(90deg, #292a30 .1em, transparent .1em);
@@ -22,7 +22,7 @@ body {
   margin: 0;
   /* display: flex; */
   /* place-items: center; */
-  min-width: 320px;
+  /* min-width: 320px; */
   /* min-height: 100vh; */
 }
 
