--- a/player-clip/src/css/App.css
+++ b/player-clip/src/css/App.css
@@ -10,8 +10,12 @@
 }
 
 .mainComponent {
-  width: 90%;
-  height: 100%;
+  /* width: 90%;
+  height: 100%; */
+  width: 1000px;
+  height: 200px;
+  min-width: 400px;
+  min-height: 200px;
   background-color: #d7d7d7;
   position: relative;
   display: flex;
