--- a/player-clip/src/css/MainComponent.css
+++ b/player-clip/src/css/MainComponent.css
@@ -6,15 +6,15 @@
   padding: 10px;
   display: flex;
   box-sizing: border-box;
-  position: relative;
-   
+  position: absolute;
+  margin-left: 20px ;
 }
 
 .constantView {
   margin: 5px;
   width: 25%;
   height: 100%;
-  background-color: #f8f8f8;
+  background-color: #f8f8f800;
   box-sizing: border-box;
 }
 
