--- a/player-clip/src/css/App.css
+++ b/player-clip/src/css/App.css
@@ -10,10 +10,9 @@
 }
 
 .mainComponent {
-  /* width: 90%;
-  height: 100%; */
-  width: 1000px;
-  height: 200px;
+  width: 90%;
+  height: 100%;
+
   min-width: 400px;
   min-height: 200px;
   background-color: #d7d7d7;
