--- a/player-clip/src/css/MainComponent.css
+++ b/player-clip/src/css/MainComponent.css
@@ -12,8 +12,8 @@
 
 .constantView {
   margin: 5px;
-  width: 25%;
-  height: 100%;
+  width: 180px;
+  height: 180px;
   background-color: #f8f8f800;
   box-sizing: border-box;
 }
