--- a/player-clip/src/css/MainComponent.css
+++ b/player-clip/src/css/MainComponent.css
@@ -3,25 +3,25 @@
   height: 100%;
   border: 1px solid #ccc;
   background-color: #d7d7d7;
-  padding: 10px;
+  /* padding: 10px; */
   display: flex;
   box-sizing: border-box;
   position: absolute;
-  margin-left: 20px ;
+  /* margin-left: 20px ; */
 }
 
 .constantView {
-  margin: 5px;
-  width: 180px;
-  height: 180px;
+  margin: 1%;
+  width: 20%;
+  height: 90%;
   background-color: #f8f8f800;
   box-sizing: border-box;
 }
 
 .tabs {
-  margin: 5px;
+  margin: 1%;
   width: 75%;
-  height: 100%;
+  height: 90%;
   background-color: #444444;
   box-sizing: border-box;
   display: flex;
