--- a/player-clip/src/css/TabHolder.css
+++ b/player-clip/src/css/TabHolder.css
@@ -54,7 +54,7 @@
 
 .plus-tile {
     margin: 5px;
-    height: 150px;
+    min-height: 100px;
     min-width: 150px; 
     display: flex;
     justify-content: center;
@@ -64,4 +64,5 @@
     cursor: pointer;
     font-size: 2rem;
     color: #000000;
+    border-radius: 10px;
 }
