--- a/player-clip/src/css/FixedCardComponent.css
+++ b/player-clip/src/css/FixedCardComponent.css
@@ -1,44 +1,48 @@
 .fixed-card {
     position: relative;
     border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 16px;
+    border-radius: 4px;
+    padding: 1px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 100%; /* Adjust max-width to fit within the main component */
+    height: 100%;
+    width: 500%;
+    max-width: 600%;
     box-sizing: border-box;
-    overflow: auto; /* Add scrollbar if content overflows */
-
+    overflow: auto; 
+    font-size: 0.65rem; 
+    font-weight: 700;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 1px;
 }
 
 .fields-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 1px;
 }
 
 .field {
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
-    width: 100%; /* Adjust width as needed */
+    margin-bottom: 4px;
+    width: 50%; 
 }
 
 .field label {
-    margin-right: 10px;
+    margin-right: 2px;
     flex: 1;
+    min-width: 80px;
 }
 
 .field input {
-    flex: 2;
-    padding: 5px;
+    flex: 1;
+    padding: 1px;
     box-sizing: border-box;
+    max-width: 80px;
 }
