--- a/player-clip/src/css/CardComponent.css
+++ b/player-clip/src/css/CardComponent.css
@@ -5,8 +5,8 @@
     padding: 5%;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* width: 100%;
-    height: 100%; */
+    width: 100%;
+    height: 100%;
     min-height: 100px;
     box-sizing: border-box;
     min-width: 150px;
