--- a/player-clip/src/css/TabHolder.css
+++ b/player-clip/src/css/TabHolder.css
@@ -9,18 +9,20 @@
 
 .navbar {
     display: flex;
-    justify-content: space-around;
-    background-color: #666666; 
-    padding: 5px;
-    flex-shrink: 0;
+    /* justify-content: space-around; */
+    background-color: #66666600; 
+    opacity: 100%;
+    /* flex-shrink: 0; */
     width: 130%;
     box-sizing: border-box;
     color: black
 }
 
 .navbar button {
-    background-color: #fff;
-    border: 1px solid #717171;
+    background-color: #e0e0e0;
+    /* border: 1px solid #71717100; */
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     padding: 10px;
     cursor: pointer;
     color: black
@@ -31,8 +33,8 @@
 }
 
 .navbar button.active {
-    background-color: #00f7ff;
-    border-color: #555;
+    background-color: #fff;
+    /* border-color: #555; */
 }
 
 .tab-content {
