--- a/player-clip/src/css/CardComponent.css
+++ b/player-clip/src/css/CardComponent.css
@@ -1,12 +1,12 @@
 .card {
     position: relative;
-    border: 1px solid #ccc;
-    border-radius: 8px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
     padding: 5%;
     background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    height: 100%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.50);
+    /* width: 100%;
+    height: 100%; */
     min-height: 100px;
     box-sizing: border-box;
     min-width: 150px;
