--- a/player-clip/src/css/TabHolder.css
+++ b/player-clip/src/css/TabHolder.css
@@ -1,7 +1,7 @@
 .tabs {
     width: 100%;
     height: 100%;
-    background-color: #444444; 
+    background-color: #acacac; 
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
     background-color: #66666600; 
     opacity: 100%;
     /* flex-shrink: 0; */
-    width: 130%;
+    width: 100%;
     box-sizing: border-box;
     color: black
 }
@@ -40,13 +40,15 @@
 .tab-content {
     padding: 1px;
     flex-grow: 1;
-    background-color: #888888; 
-    border: 1px solid #ccc;
-    border-radius: 8px;
+    background-color: #fff; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     overflow: auto;
-    width: 130%;
+    width: auto;
     box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .items-container {
@@ -61,10 +63,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ccc;
+    background-color: #e0e0e0;
     border: 1px  #717171;
     cursor: pointer;
     font-size: 2rem;
-    color: #000000;
+    color: #fff;
     border-radius: 10px;
 }
