Card Component minor adjustments
gave cards margins

--- a/player-clip/src/css/App.css
+++ b/player-clip/src/css/App.css
@@ -10,7 +10,8 @@
 }
 
 .mainComponent {
-  margin: 5px;
+  /* align-self:baseline; */
+  margin: 10px;
   width: 1000px;
   height: 200px;
   min-width: 400px;
