--- a/player-clip/src/css/FixedCardComponent.css
+++ b/player-clip/src/css/FixedCardComponent.css
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1px;
+    margin-bottom: 1%;
 }
 
 .fields-container {
