--- a/player-clip/src/css/TabHolder.css
+++ b/player-clip/src/css/TabHolder.css
@@ -50,6 +50,7 @@
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
+    font-size: 0.8rem;
 }
 
 .items-container {
