--- a/player-clip/src/css/TabHolder.css
+++ b/player-clip/src/css/TabHolder.css
@@ -25,7 +25,8 @@
     border-top-right-radius: 10px;
     padding: 10px;
     cursor: pointer;
-    color: black
+    color: black;
+    width: 12%;
 }
 
 .navbar button:hover {
