--- a/player-clip/src/css/App.css
+++ b/player-clip/src/css/App.css
@@ -13,8 +13,8 @@
   margin: 10px;
   width: 1000px;
   height: 250px;
-  min-width: 400px;
-  min-height: 200px;
+  /* min-width: 400px;
+  min-height: 200px; */
   background-color: #d7d7d7;
   position: relative;
   display: flex;
