--- a/player-clip/src/css/ModalComponent.css
+++ b/player-clip/src/css/ModalComponent.css
@@ -17,13 +17,13 @@
     transform: translate(-50%, -50%);
     background: white;
     padding: 20px;
-    border-radius: 8px;
-    width: 300px;
+    border-radius: 10px;
+    width: 50%;
+    height: 50%;
 }
-
 .field {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     margin-bottom: 10px;
 }
 
