--- a/player-clip/src/css/TabHolder.css
+++ b/player-clip/src/css/TabHolder.css
@@ -63,11 +63,10 @@
 
 .plus-tile {
     margin: 1%;
-    /* height: 100%; */
-    width: 18%;
+    height: 100%;
+    width: 14%;
+    min-width: 14%;
     height: 94%;
-    min-height: 100px;
-    min-width: 150px; 
     display: flex;
     justify-content: center;
     align-items: center;
