--- a/player-clip/src/css/ModalComponent.css
+++ b/player-clip/src/css/ModalComponent.css
@@ -19,6 +19,9 @@
     padding: 20px;
     border-radius: 8px;
     width: 300px;
+    max-width: 90%;
+    max-height: 90%;
+    overflow: auto;
 }
 
 .field {
@@ -31,8 +34,17 @@
     margin-bottom: 5px;
 }
 
-.field input {
-    padding: 5px;
+.field input,
+.field textarea {
+    padding: 2px;
     box-sizing: border-box;
+    width: 100%; 
+    max-width: 120%; 
 }
 
+
+.field textarea {
+    resize: both; 
+    min-height: 50px;
+    max-height: 200px; 
+}
