--- a/src/css/FixedCardComponent.css
+++ b/src/css/FixedCardComponent.css
@@ -2,7 +2,7 @@
     position: relative;
     border: 1px solid #ccc;
     border-radius: 10px;
-    padding: 1px;
+    /* padding: 1px; */
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     height: 100%;
@@ -11,7 +11,7 @@
     overflow: auto;
     display: flex;
     flex-wrap: wrap;
-    font-size: 0.6rem; 
+    font-size: 0.65rem; 
     font-weight: 700;
 }
 
